[project]
name = "pm25-forecast-openmeteo-aqicn"
version = "0.1.0"
description = "PM2.5 Forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4,<2.0",
    "pandas>=2.0.3,<3.0",
    "matplotlib>=3.8.3",
    "scipy>=1.16.3",
    "scikit-learn>=1.2.2,<2.0",
    "xgboost>=2.0.3,<3.0",
    "hopsworks[python,polars,great-expectations]>=4.2.0,<4.3.0",
    "feldera>=0.33.0",
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "streamlit>=1.28.2,<2.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.6.1",
    "geopy>=2.4.1",
    "openmeteo-requests",
    "requests-cache>=1.2.0",
    "retry-requests>=2.0.0",
    "plotly",
    "seaborn",
    "nbformat",
    "Faker",
    "modal>=1.2.2",
    "python-dotenv>=1.0.0",
]